src/objects/RMU_VALUE__c/RMU_VALUE__c.object-meta.xml
<CustomObject>
    <description>Retrofit Modification Upgrade</description>
    <label>Offering</label>
    <nameField>
        <label>Offering Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offerings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>