src/objects/RMU_VALUE__c/fields/Aircraft_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Quantity__c</fullName>
    <inlineHelpText>This content auto populates based on the Offering Platform(s) attached to this Offering (source data from Flight Global). Represents the total # of in service A/C for the platforms listed on all the Offering Platform pages.</inlineHelpText>
    <label>Aircraft Quantity</label>
    <summarizedField>OFFERING_MAPPER__c.Aircraft_Quantity__c</summarizedField>
    <summaryForeignKey>OFFERING_MAPPER__c.RMU_VALUE__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>