src/objects/RMU_VALUE__c/fields/Base_Offering__c.field-meta.xml
<CustomField>
    <fullName>Base_Offering__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This should be if this offering is baseline configuration</inlineHelpText>
    <label>Base Offering</label>
    <type>Checkbox</type>
</CustomField>