src/objects/RMU_VALUE__c/fields/Briefcase_Path__c.field-meta.xml
<CustomField>
    <fullName>Briefcase_Path__c</fullName>
    <label>Briefcase Path</label>
    <type>Url</type>
</CustomField>