src/objects/RMU_VALUE__c/fields/Brochures__c.field-meta.xml
<CustomField>
    <fullName>Brochures__c</fullName>
    <label>Brochures</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>