src/objects/RMU_VALUE__c/fields/Bulletins__c.field-meta.xml
<CustomField>
    <fullName>Bulletins__c</fullName>
    <inlineHelpText>List of Brochures and Bulletins related to selected Offerings extracted from Library</inlineHelpText>
    <label>Bulletins</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>