src/objects/RMU_VALUE__c/fields/CABIN_SVCS_TXT__c.field-meta.xml
<CustomField>
    <fullName>CABIN_SVCS_TXT__c</fullName>
    <label>CABIN_SVCS_TXT </label>
    <length>10</length>
    <type>Text</type>
</CustomField>