src/objects/RMU_VALUE__c/fields/CBT_LEAD_TXT__c.field-meta.xml
<CustomField>
    <fullName>CBT_LEAD_TXT__c</fullName>
    <label>CBT Lead</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>