src/objects/RMU_VALUE__c/fields/DS_OTHER_MARKET_TXT__c.field-meta.xml
<CustomField>
    <fullName>DS_OTHER_MARKET_TXT__c</fullName>
    <label>DS_OTHER_MARKET_TXT </label>
    <length>10</length>
    <type>Text</type>
</CustomField>