src/objects/RMU_VALUE__c/fields/Estimated_RMU_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_RMU_Lead_Time__c</fullName>
    <inlineHelpText>This is the turn-around time to receive an order, process it (accumulate/ create what is needed), ship it and have it received by the customer/Dealer. It does not include the time to install which is covered in another field.</inlineHelpText>
    <label>Estimated Lead Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>