src/objects/RMU_VALUE__c/fields/EUSALES_NM__c.field-meta.xml
<CustomField>
    <fullName>EUSALES_NM__c</fullName>
    <label>EUSALES_NM </label>
    <length>30</length>
    <type>Text</type>
</CustomField>