src/objects/RMU_VALUE__c/fields/HON_EMEA_RQMTS_TXT__c.field-meta.xml
<CustomField>
    <fullName>HON_EMEA_RQMTS_TXT__c</fullName>
    <label>HON_EMEA_RQMTS_TXT </label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>