src/objects/RMU_VALUE__c/fields/How_to_sell_Video__c.field-meta.xml
<CustomField>
    <fullName>How_to_sell_Video__c</fullName>
    <defaultValue>false</defaultValue>
    <label>How to sell Video</label>
    <type>Checkbox</type>
</CustomField>