src/objects/RMU_VALUE__c/fields/IDPS_PHASE_4_FINISH_DT__c.field-meta.xml
<CustomField>
    <fullName>IDPS_PHASE_4_FINISH_DT__c</fullName>
    <label>IDPS_PHASE_4_FINISH_DT </label>
    <type>DateTime</type>
</CustomField>