src/objects/RMU_VALUE__c/fields/M_PM_Product__c.field-meta.xml
<CustomField>
    <fullName>M_PM_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the key Product for which the Offering applies.</inlineHelpText>
    <label>Product Type</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Product_Line_Cross_Ref__c.Product_Line_Cross_Ref_Type__c</field>
            <operation>equals</operation>
            <value>Product</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product_Line_Cross_Ref__c</referenceTo>
    <relationshipLabel>Offerings</relationshipLabel>
    <relationshipName>RMUs</relationshipName>
    <type>Lookup</type>
</CustomField>