src/objects/RMU_VALUE__c/fields/NBA_COPY_TXT__c.field-meta.xml
<CustomField>
    <fullName>NBA_COPY_TXT__c</fullName>
    <label>NBA_COPY_TXT </label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>