src/objects/RMU_VALUE__c/fields/Obs_End_of_Repairs_EOR__c.field-meta.xml
<CustomField>
    <fullName>Obs_End_of_Repairs_EOR__c</fullName>
    <label>Obs End of Repairs (EOR)</label>
    <type>Date</type>
</CustomField>