src/objects/RMU_VALUE__c/fields/Offering_SIS__c.field-meta.xml
<CustomField>
    <fullName>Offering_SIS__c</fullName>
    <formula>HYPERLINK(&quot;/apex/APXTConga4__Conga_Composer?sessionId=API.Session_ID&amp;serverUrl=API.Partner_Server_URL_290&amp;QueryId=[OfferProd]a1G1B00000CwbsE&amp;TemplateID=a0w1B00000rkCJi&amp;DS7=3&amp;OFN=&quot;&amp; Name &amp;&quot;+_+Sales+Information+Sheet&amp;id=&quot;&amp;Id, &quot;Sales Info Sheet&quot;)</formula>
    <label>Offering SIS</label>
    <type>Text</type>
</CustomField>