src/objects/RMU_VALUE__c/fields/Offering_URL__c.field-meta.xml
<CustomField>
    <fullName>Offering_URL__c</fullName>
    <formula>&quot;https://hon-aero.my.salesforce.com/&quot;+Id+&quot;?target=_self&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offering URL</label>
    <type>Text</type>
</CustomField>