src/objects/RMU_VALUE__c/fields/PAYLOAD_V_BASE_NUM__c.field-meta.xml
<CustomField>
    <fullName>PAYLOAD_V_BASE_NUM__c</fullName>
    <label>PAYLOAD_V_BASE_NUM </label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>