src/objects/RMU_VALUE__c/fields/Pricing_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Expiration_Date__c</fullName>
    <label>Pricing Expiration Date</label>
    <type>Date</type>
</CustomField>