src/objects/RMU_VALUE__c/fields/RESALE_V_NBA_NUM__c.field-meta.xml
<CustomField>
    <fullName>RESALE_V_NBA_NUM__c</fullName>
    <label>RESALE_V_NBA_NUM </label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>