src/objects/RMU_VALUE__c/fields/RMU_Type__c.field-meta.xml
<CustomField>
    <fullName>RMU_Type__c</fullName>
    <inlineHelpText>Contract = Sales records pulled from Contracts returned from SAP. 
Product = Sales records pulled from Opportunities Closed Won and/or SAP</inlineHelpText>
    <label>Offering Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>