src/objects/RMU_VALUE__c/fields/RMU_Xactly__c.field-meta.xml
<CustomField>
    <fullName>RMU_Xactly__c</fullName>
    <inlineHelpText>Indicate if this Offering is linked to SIP payouts.</inlineHelpText>
    <label>Xactly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>