src/objects/RMU_VALUE__c/fields/SAFETY_V_NBA_NUM__c.field-meta.xml
<CustomField>
    <fullName>SAFETY_V_NBA_NUM__c</fullName>
    <label>SAFETY_V_NBA_NUM </label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>