src/objects/RMU_VALUE__c/fields/Stage_of_Flight__c.field-meta.xml
<CustomField>
    <fullName>Stage_of_Flight__c</fullName>
    <label>Stage of Flight</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Planning</fullName>
            </value>
            <value>
                <fullName>En-Route</fullName>
            </value>
            <value>
                <fullName>Post-Flight</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Pre-Flight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>