src/objects/RMU_VALUE__c/recordTypes/Package_Offering.recordType-meta.xml
<RecordType>
    <fullName>Package_Offering</fullName>
    <active>true</active>
    <label>Package Offering</label>
</RecordType>