src/objects/RMU_VALUE__c/validationRules/Content_approved_should_be_checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Content_approved_should_be_checked</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
	not CONTAINS( $Profile.Name, &quot;API&quot; ), 
not CONTAINS( $Profile.Name, &quot;System Admin&quot; ), 
				ISCHANGED(On_Expiry__c),Content_Approved__c = false)</errorConditionFormula>
    <errorMessage>Content Expiration date should be +90 days and Content approved should be checked to have Content Expiration Date accepted</errorMessage>
</ValidationRule>