src/objects/RMU_VALUE__c/validationRules/Pricing_approved_should_be_checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Pricing_approved_should_be_checked</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED(Pricing_Expiration_Date__c),Pricing_Approved__c = false)</errorConditionFormula>
    <errorMessage>Pricing Expiration date should be +90 days and pricing approved should be checked to have Pricing Expiration Date accepted</errorMessage>
</ValidationRule>