src/objects/RMU_VALUE__c/validationRules/Update_Content_Expiration_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_Content_Expiration_date</fullName>
    <active>true</active>
    <description>Update Content Expiration date</description>
    <errorConditionFormula>AND( 
not CONTAINS( $Profile.Name, &quot;API&quot; ),
not CONTAINS( $Profile.Name, &quot;System Admin&quot; ), 
Content_Approved__c = True, 
ISNULL(On_Expiry__c)
)</errorConditionFormula>
    <errorDisplayField>On_Expiry__c</errorDisplayField>
    <errorMessage>Content Expiration Date cannot be blank</errorMessage>
</ValidationRule>