src/objects/RMU_VALUE__c/validationRules/Update_Pricing_Expiration_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_Pricing_Expiration_date</fullName>
    <active>true</active>
    <description>Update Pricing Expiration date</description>
    <errorConditionFormula>AND( 
not CONTAINS( $Profile.Name, &quot;API&quot; ), 
not CONTAINS( $Profile.Name, &quot;System Admin&quot; ), 
Pricing_Approved__c = True, 
ISNULL(Pricing_Expiration_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Pricing_Expiration_Date__c</errorDisplayField>
    <errorMessage>Pricing  Expiration Date cannot be blank</errorMessage>
</ValidationRule>