src/objects/RMU_VALUE__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>RMU_Status__c</columns>
    <columns>RMU_Classification__c</columns>
    <columns>Managing_SBU__c</columns>
    <columns>RMU_Product_Ratio__c</columns>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Briefcase__c</columns>
    <columns>HON_DESC__c</columns>
    <columns>M_PM_Product__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Technical_Sales_Manager__c</columns>
    <columns>Aircraft_Quantity__c</columns>
    <columns>Aircraft_Open_Count__c</columns>
    <columns>Aircraft_Installed_Quantity__c</columns>
    <columns>M_PM_Product_Line_Family__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
    <language>en_US</language>
</ListView>