src/objects/RMU_VALUE__c/listViews/BGA.listView-meta.xml
<ListView>
    <fullName>BGA</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>RMU_Status__c</columns>
    <columns>Technical_Sales_Manager__c</columns>
    <columns>Campaign_Manager__c</columns>
    <columns>M_PM_Product__c</columns>
    <columns>Briefcase__c</columns>
    <columns>Briefcase_BGA__c</columns>
    <columns>Brochure_Media__c</columns>
    <columns>Briefcase_ATR__c</columns>
    <columns>Buying_Persona__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Managing_SBU__c</field>
        <operation>equals</operation>
        <value>BGA</value>
    </filters>
    <label>BGA</label>
</ListView>