src/objects/RMU_VALUE__c/listViews/Connected_Offerings.listView-meta.xml
<ListView>
    <fullName>Connected_Offerings</fullName>
    <columns>NAME</columns>
    <columns>RMU_Group_Name__c</columns>
    <columns>Managing_SBU__c</columns>
    <columns>HON_DESC__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>RMU_Status__c</columns>
    <columns>M_PM_Product__c</columns>
    <columns>M_PM_Product_Line_Family__c</columns>
    <columns>Campaign__c</columns>
    <columns>RMU_Classification__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>M_PM_Product_Leader__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>jetwave,jet wave,connected,aerowave,godirect,go direct,sky connect,HUMS,Troubleshooter,MyMaintainer,Service Plans,Aspire,Sky Connect,Flight Bag,Connectivity,Performance Based Contracting,PBC,ADG-300,DLMU,MSP Propulsion,gateway,MSP,HAPP</value>
    </filters>
    <label>Connected Offerings</label>
</ListView>