src/objects/RMU_VALUE__c/listViews/Contract_Offerings.listView-meta.xml
<ListView>
    <fullName>Contract_Offerings</fullName>
    <columns>NAME</columns>
    <columns>Technical_Sales_Manager__c</columns>
    <columns>RMU_Contract_Type__c</columns>
    <columns>RMU_Status__c</columns>
    <columns>HON_DESC__c</columns>
    <columns>M_PM_Product__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RMU_Type__c</field>
        <operation>equals</operation>
        <value>Contract</value>
    </filters>
    <label>Contract Offerings</label>
</ListView>