src/objects/RMU_VALUE__c/listViews/D_S.listView-meta.xml
<ListView>
    <fullName>D_S</fullName>
    <columns>Technical_Sales_Manager__c</columns>
    <columns>RMU_Status__c</columns>
    <columns>NAME</columns>
    <columns>HON_DESC__c</columns>
    <columns>M_PM_Product__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Briefcase_D_S__c</columns>
    <columns>Briefcase__c</columns>
    <columns>CBT_LEAD_TXT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>contains</operation>
        <value>Mald</value>
    </filters>
    <label>D&amp;S</label>
</ListView>