src/objects/RMU_VALUE__c/listViews/RMUBriefcaseView.listView-meta.xml
<ListView>
    <fullName>RMUBriefcaseView</fullName>
    <columns>RMU_Group_Name__c</columns>
    <columns>NAME</columns>
    <columns>Briefcase_Path__c</columns>
    <columns>Briefcase_Title__c</columns>
    <columns>Briefcase__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Managing_SBU__c</columns>
    <columns>Aircraft_Open_Count__c</columns>
    <columns>Aircraft_Quantity__c</columns>
    <columns>Aircraft_Platform_Count__c</columns>
    <columns>Aircraft_Installed_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>RMUBriefcaseView</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_Sales</group>
    </sharedTo>
</ListView>