src/objects/RMU_VALUE__c/listViews/Updated_This_Week.listView-meta.xml
<ListView>
    <fullName>Updated_This_Week</fullName>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RMU_Status__c</columns>
    <columns>RMU_Classification__c</columns>
    <columns>Managing_SBU__c</columns>
    <columns>RMU_Product_Ratio__c</columns>
    <columns>NAME</columns>
    <columns>HON_DESC__c</columns>
    <columns>M_PM_Product__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Aircraft_Quantity__c</columns>
    <columns>Aircraft_Open_Count__c</columns>
    <columns>Aircraft_Installed_Quantity__c</columns>
    <columns>M_PM_Product_Line_Family__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>gnSFDCSPIRAL API User</value>
    </filters>
    <label>Updated This Week</label>
</ListView>